--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,14 +6,14 @@ format:
     theme: cyborg
     css: styles.css
   revealjs:
-    footer: "{{< meta title >}}: <https://milanmlft.com/talks>"
+    footer: "{{< meta title >}} <https://milanmlft.com/talks>"
     hash-type: number
     history: false
     incremental: true
     link-external-icon: true
     link-external-newwindow: true
     slide-number: true
-    theme: dark
+    theme: night
 
 website:
   navbar:
