--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,5 @@ repos:
           - prettier
           - "@shopify/prettier-plugin-liquid"
         args:
-          - --prose-wrap=always
+          - --prose-wrap=preserve
           - --quote-props=as-needed
