--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -12,7 +12,28 @@ jobs:
   linting:
     runs-on: ubuntu-latest
     steps:
-      # yamllint disable-line rule:line-length
-      - uses: paddyroddy/.github/actions/linting@29d3bd9b176d306bd566bf65f7ace08860ff5b6c # v0
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Cache pre-commit
+        uses: actions/cache@v4
         with:
-          pre-commit-config: ./.pre-commit-config.yaml
+          path: ~/.cache/pre-commit
+          key: cache-${{ hashFiles(inputs.pre-commit-config) }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - name: Install pre-commit
+        shell: bash
+        run: python -m pip install pre-commit
+
+      - name: Run pre-commit
+        shell: bash
+        run: pre-commit run --all-files --color always --verbose
+
+      # yamllint disable-line rule:line-length
+      - uses: pre-commit-ci/lite-action@v1.1.0
+        if: ${{ !cancelled() }}
