--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ format:
     theme: cyborg
     fontsize: 0.8em
   revealjs:
-    footer: "{{< meta title >}} <https://milanmlft.com/talks>"
+    footer: "{{< meta title >}} | <https://milanmlft.github.io/talks/>"
     hash-type: number
     history: false
     incremental: true
