Fix GHA publish job permissions (#11)

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+      - renovate/**
+  pull_request:
 
 permissions:
   contents: write
@@ -13,6 +15,9 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
 
     steps:
       - name: Check out repository
@@ -34,7 +39,12 @@ jobs:
             any::downlit
             any::xml2
 
+      - name: Render ${{ github.ref_name }} branch
+        if: github.ref != 'refs/heads/main'
+        uses: quarto-dev/quarto-actions/render@v2
+
       - name: Render and Publish to GitHub Pages
+        if: github.ref == 'refs/heads/main'
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
