--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Render and Publish to GitHub Pages
         if: github.ref == 'refs/heads/main'
-        uses: quarto-dev/quarto-actions/publish@v2
+        uses: quarto-dev/quarto-actions/publish@9e48da27e184aa238fcb49f5db75469626d43adb # v2
         with:
           target: gh-pages
         env:
