Set concurrency groups for GHA

--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -8,6 +8,11 @@ on:
       - renovate/**
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   linting:
     runs-on: ubuntu-latest
